fix: yalb(alignment): pushing menu items out to the left/right depending on alignment

--- a/components/03-organisms/menu/primary-nav/_yds-primary-nav.scss
+++ b/components/03-organisms/menu/primary-nav/_yds-primary-nav.scss
@@ -76,14 +76,12 @@ $menu-sub-max-width: 19rem;
     place-content: center;
   }
 
-  @media (max-width: tokens.$break-mobile-max) {
-    [data-site-header-nav-position='left'] & {
-      margin-left: calc(var(--size-spacing-5) * -1);
-    }
+  [data-site-header-nav-position='left'] & {
+    margin-left: calc(var(--size-spacing-5) * -1);
+  }
 
-    [data-site-header-nav-position='right'] & {
-      margin-right: calc(var(--size-spacing-5) * -1);
-    }
+  [data-site-header-nav-position='right'] & {
+    margin-right: calc(var(--size-spacing-5) * -1);
   }
 }
 
